# flamethrower

./: .gitignore  LICENSE  README.md  main.py  mypy.ini  pyproject.toml  pytest.ini  requirements.txt  setup.py  test.py  test_main.py
.flamethrower/: .gitignore  README.md  summary.txt
.github/workflows/: ci.yml
agents/: executor.py  file_chooser.py  file_writer.py
config/: constants.py
context/: conv_manager.py  dir_walker.py  goodbye_world.py  prompt.py
examples/Easy-Basic_API_Request/: awesome_quotes.sh  chat.py
examples/Easy-Shell_Commands/: danger.sh  safe.sh
models/: llm.py  models.py  test.py
shell/: command_handler.py  languages.py  printer.py  sequence_parser.py  setup.py  special_keys.py  terminal.py
src/flamethrower/agents/: driver.py  executor.py  file_chooser.py  file_writer.py  interpreter.py  operator.py  router.py  summarizer.py
src/flamethrower/config/: constants.py
src/flamethrower/containers/: container.py  lm_container.py
src/flamethrower/context/: conv_manager.py  dir_walker.py  prompt.py  sample_gitignore.py
src/flamethrower/data/: .sample.gitignore  .sample.zshrc
src/flamethrower/exceptions/: exceptions.py  handlers.py
src/flamethrower/models/: client_interface.py  llm.py  models.py  openai_client.py
src/flamethrower/setup/: dir_walker.py  setup.py  summary_manager.py
src/flamethrower/shell/: README.md  command_handler.py  printer.py  setup.py  shell.py  shell_manager.py
src/flamethrower/utils/: colors.py  diff.py  (+9 more)
test/: test_main.py
tests/: e2e.py  test_main.py  test_timer.py
tests/mocks/: mock_conv_manager.py  mock_token_counter.py
utils/: colors.py  loader.py  zsh_history.py
(+50 files in other folders)
